--- a/styles/index.css
+++ b/styles/index.css
@@ -3,12 +3,7 @@
     padding: 0%;
 }
 
-@keyframes example {
-    0%   {background-color: rgb(231, 247, 187);}
-    25%  {background-color: yellow;}
-    50%  {background-color: blue;}
-    100% {background-color: green;}
-  }
+
 
 .container-fluid{
     background-color: rgb(226, 190, 146);
@@ -26,7 +21,8 @@
 
 #carouselExample img{
     width: 100%;
-    height: 550px;
+    height: auto;
+  
     
  
 }
@@ -34,8 +30,8 @@
 .testos{
     width:50%;
     position: absolute;
-    top: 15%;
-    left: 20%;
+    top: 10%;
+    left: 25%;
     transform: translate(-50%, -50%);
     background-color: rgb(250, 241, 228);
     padding: 10px;
@@ -43,13 +39,31 @@
 
 }
 
-.testos{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    animation-name: example;
-    animation-duration: 4s;
+#cards{
+
+    width:100%;
+    display: flex;
+    gap: 20px;
+    justify-content: space-around;
+    background-color:rgb(209, 193, 174) ;
+    text-align: center;
+    align-items: center;
+
+
+
 }
+
+
+footer{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(226, 190, 146);
+}
+
+
+
+
+
 
 
 
